--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,26 @@
 @import url("https://fonts.googleapis.com/css?family=Hind:400,700");
-html, body {
+.mbl-card {
   font-family: 'Hind', sans-serif;
-  margin: 0;
-  padding: 0;
-  background-color: #d9e2fd;
   width: 100%;
   height: 100%;
 }
 
-img {
+.mbl-card img {
   max-width: 100%;
   height: auto;
   display: block;
 }
 
-h3 {
+.mbl-carousel-wrapper h3 {
   text-align: center;
   font-weight: 400;
   margin-bottom: 0;
 }
 
-.carousel-wrapper {
-  position: relative;
-  width: 70%;
-  height: 70%;
+.mbl-carousel-wrapper {
+  position: fixed;
+  width:100%;
+  height: 100%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -32,23 +29,23 @@ h3 {
   box-shadow: 0px 12px 39px -19px rgba(0, 0, 0, 0.75);
   overflow: hidden;
 }
-.carousel-wrapper .carousel {
+.mbl-carousel-wrapper .mbl-carousel {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
   width: 100%;
   height: auto;
 }
-.carousel-wrapper .carousel .carousel-cell {
+.mbl-carousel-wrapper .mbl-carousel .mbl-carousel-cell {
   padding: 10px;
   background-color: #FFFFFF;
   width: 20%;
   height: auto;
   min-width: 120px;
-  margin: 0 20px;
+  margin: 0 190px;
   transition: transform 500ms ease;
 }
-.carousel-wrapper .carousel .carousel-cell .more {
+.mbl-carousel-wrapper .mbl-carousel .mbl-carousel-cell .more {
   display: block;
   opacity: 0;
   margin: 5px 0 15px 0;
@@ -58,11 +55,11 @@ h3 {
   text-decoration: none;
   transition: opacity 300ms ease;
 }
-.carousel-wrapper .carousel .carousel-cell .more:hover, .carousel-wrapper .carousel .carousel-cell .more:active, .carousel-wrapper .carousel .carousel-cell .more:visited, .carousel-wrapper .carousel .carousel-cell .more:focus {
+.mbl-carousel-wrapper .mbl-carousel .mbl-carousel-cell .more:hover, .mbl-carousel-wrapper .mbl-carousel .mbl-carousel-cell .more:active, .mbl-carousel-wrapper .mbl-carousel .mbl-carousel-cell .more:visited, .mbl-carousel-wrapper .mbl-carousel .mbl-carousel-cell .more:focus {
   color: #CFCFCF;
   text-decoration: none;
 }
-.carousel-wrapper .carousel .carousel-cell .line {
+.mbl-carousel-wrapper .mbl-carousel .mbl-carousel-cell .line {
   position: absolute;
   width: 2px;
   height: 0;
@@ -72,7 +69,7 @@ h3 {
   transition: height 300ms ease;
   display: block;
 }
-.carousel-wrapper .carousel .carousel-cell .price {
+.mbl-carousel-wrapper .mbl-carousel .mbl-carousel-cell .price {
   position: absolute;
   font-weight: 700;
   margin: 45px auto 0 auto;
@@ -81,22 +78,23 @@ h3 {
   opacity: 0;
   transition: opacity 300ms ease 300ms;
 }
-.carousel-wrapper .carousel .carousel-cell .price sup {
+.mbl-carousel-wrapper .mbl-carousel .mbl-carousel-cell .price sup {
   top: 2px;
   position: absolute;
 }
-.carousel-wrapper .carousel .carousel-cell.is-selected {
-  transform: scale(1.2);
+.mbl-carousel-wrapper .mbl-carousel .mbl-carousel-cell.is-selected {
+  transform: scale(3.0);
+  z-index: 999;
 }
-.carousel-wrapper .carousel .carousel-cell.is-selected .line {
+.mbl-carousel-wrapper .mbl-carousel .mbl-carousel-cell.is-selected .line {
   height: 35px;
 }
-.carousel-wrapper .carousel .carousel-cell.is-selected .price, .carousel-wrapper .carousel .carousel-cell.is-selected .more {
+.mbl-carousel-wrapper .mbl-carousel .mbl-carousel-cell.is-selected .price, .mbl-carousel-wrapper .mbl-carousel .mbl-carousel-cell.is-selected .more {
   opacity: 1;
 }
-.carousel-wrapper .flickity-page-dots {
+.mbl-carousel-wrapper .flickity-page-dots {
   display: none;
 }
-.carousel-wrapper .flickity-viewport, .carousel-wrapper .flickity-slider {
+.mbl-carousel-wrapper .flickity-viewport, .mbl-carousel-wrapper .flickity-slider {
   overflow: visible;
 }
