--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,20 @@
   height: 100%;
 }
 
+.mbl-card h3 {
+  margin-top: 0px;
+  font-size: 1.17em;
+}
+
+.mbl-card h4 {
+  margin-top: 0px;
+  font-size: 0.88em;
+  font-weight: normal;
+  text-align: left;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
 .mbl-card img {
   max-width: 100%;
   height: auto;
@@ -20,12 +34,12 @@
 .mbl-carousel-wrapper {
   position: fixed;
   width:100%;
-  height: 100%;
+  height: inherit;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: #FFFFFF;
-  background-image: linear-gradient(#FFFFFF 50%, #FFFFFF 50%, #F0F3FC 50%);
+  background-image: linear-gradient(#F0F3FC 50%, #F0F3FC 50%, #F0F3FC 50%);
   box-shadow: 0px 12px 39px -19px rgba(0, 0, 0, 0.75);
   overflow: hidden;
 }
@@ -42,7 +56,7 @@
   width: 20%;
   height: auto;
   min-width: 120px;
-  margin: 0 190px;
+  margin: 0 140px;
   transition: transform 500ms ease;
 }
 .mbl-carousel-wrapper .mbl-carousel .mbl-carousel-cell .more {
@@ -69,7 +83,7 @@
   transition: height 300ms ease;
   display: block;
 }
-.mbl-carousel-wrapper .mbl-carousel .mbl-carousel-cell .price {
+.mbl-carousel-wrapper .mbl-carousel .mbl-carousel-cell .explore {
   position: absolute;
   font-weight: 700;
   margin: 45px auto 0 auto;
@@ -78,18 +92,20 @@
   opacity: 0;
   transition: opacity 300ms ease 300ms;
 }
-.mbl-carousel-wrapper .mbl-carousel .mbl-carousel-cell .price sup {
+.mbl-carousel-wrapper .mbl-carousel .mbl-carousel-cell .explore sup {
   top: 2px;
   position: absolute;
 }
 .mbl-carousel-wrapper .mbl-carousel .mbl-carousel-cell.is-selected {
   transform: scale(3.0);
   z-index: 999;
+  min-height: 25em;
+  max-height: 25em;
 }
 .mbl-carousel-wrapper .mbl-carousel .mbl-carousel-cell.is-selected .line {
   height: 35px;
 }
-.mbl-carousel-wrapper .mbl-carousel .mbl-carousel-cell.is-selected .price, .mbl-carousel-wrapper .mbl-carousel .mbl-carousel-cell.is-selected .more {
+.mbl-carousel-wrapper .mbl-carousel .mbl-carousel-cell.is-selected .explore, .mbl-carousel-wrapper .mbl-carousel .mbl-carousel-cell.is-selected .more {
   opacity: 1;
 }
 .mbl-carousel-wrapper .flickity-page-dots {
@@ -97,4 +113,10 @@
 }
 .mbl-carousel-wrapper .flickity-viewport, .mbl-carousel-wrapper .flickity-slider {
   overflow: visible;
+}
+.explore a{
+  text-decoration: none;
+}
+.explore a:visited{
+  color:blueviolet;
 }
